custom-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-file-copy-pod
  namespace: confluent
spec:
  containers:
    - name: pv-file-copy-container
      image: busybox
      command: ["/bin/sh", "-c", "sleep 3600"] 
      volumeMounts:
        - name: custom-pv-volume
          mountPath: /mnt/data
  volumes:
    - name: custom-pv-volume
      persistentVolumeClaim:
        claimName: custom-pvc
