kafkatopic-naming-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sTopicName
metadata:
  name: kafkatopicname-constraint
spec:
  match:
    kinds:
      - apiGroups: ["platform.confluent.io"]
        kinds: ["KafkaTopic"]
  parameters: {}
